--- a/express-backend/package.json
+++ b/express-backend/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-     "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "amadeus": "^10.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
