--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,23 +13,31 @@ jobs:
       matrix:
         node-version: [18.x, 20.x, 22.x]
 
-    steps:
+     steps:
     - uses: actions/checkout@v4
+
     - name: Use Node.js ${{ matrix.node-version }} (Backend)
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: express-backend/package-lock.json
 
-    - run: npm ci
-      working-directory: express-backend
+    - name: Cache npm dependencies for Backend
+      uses: actions/cache@v3
+      with:
+        path: express-backend/node_modules  # Cache node_modules directory
+        key: ${{ runner.os }}-node-backend-${{ hashFiles('express-backend/package.json') }}  # Use package.json hash
+        restore-keys: |
+          ${{ runner.os }}-node-backend-
+
+    - run: npm install
+      working-directory: express-backend  # Install dependencies from package.json
+
+    - run: npm install amadeus
+      working-directory: express-backend  # Install amadeus separately if not in package.json
 
     - run: npm run build --if-present
       working-directory: express-backend
 
-    - run: npm test
-      working-directory: express-backend
 
   frontend-build:
     runs-on: ubuntu-latest
@@ -50,7 +58,4 @@ jobs:
       working-directory: client-reactNative-Frontend
 
     - run: npm run build --if-present
-      working-directory: client-reactNative-Frontend
-
-    - run: npm test
       working-directory: client-reactNative-Frontend
