--- a/express-backend/package.json
+++ b/express-backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "amadeus": "^10.1.0",
+    "axios": "^1.7.9",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
