--- a/express-backend/package.json
+++ b/express-backend/package.json
@@ -8,15 +8,16 @@
   },
   "dependencies": {
     "amadeus": "^10.1.0",
-    "axios": "^1.7.9",
+    "axios": "^1.8.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.20.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "openai": "^4.86.2"
   },
   "main": "app.js",
   "devDependencies": {
